# TORQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
brand-kit/: README.md
data/: README.md  eval_diagnosis.json  eval_results.json  gateway_source.json  shifts.json
data-room/: README.md  TORQ_deck.pptx  architecture.md  demo-script.md  impact-methodology.md  risk-register.md  tech-stack.md
data/eval/: golden.json
data/scenarios/: README.md  scenarios.json
scripts/: README.md  build_deck.py  eval_diagnosis.py  eval_retrieval.py  mqtt_gateway.py  run_action.py  run_brain.py  run_loop.py  run_mcp.py  run_mqtt.py  run_pdf.py  seed_demo.py  test_whatsapp.py
src/torq/: __init__.py  config.py  pipeline.py
src/torq/agent/: __init__.py  diagnose.py  prompts.py  schemas.py
src/torq/api/: __init__.py  main.py  routes.py
src/torq/db/: __init__.py  models.py  session.py
src/torq/dispatch/: __init__.py  approval.py  notify.py  routing.py
src/torq/eval/: __init__.py  retrieval.py
src/torq/events/: __init__.py  listener.py  live.py  schemas.py  simulator.py
src/torq/ingest/: __init__.py  history.py  manuals.py
src/torq/knowledge/: __init__.py  feedback.py
src/torq/mcp/: __init__.py  client.py  connectors.py  server.py
src/torq/operator/: report.html
src/torq/workorder/: __init__.py  generate.py  pdf.py
tests/: README.md  __init__.py  test_activity_log.py  test_async_feedback.py  test_boost.py  test_db_session.py  test_diagnose_cache.py  test_events.py  test_ingest_ids.py  test_machine_registry.py  test_mcp_fallback.py  test_metrics_charts.py  test_pipeline.py  test_react_diagnosis.py  test_translation_fallback.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  ErrorBoundary.jsx  api.js  i18n.jsx  main.jsx  styles.css  toast.jsx
web/src/components/: ConfirmDialog.jsx  ConfirmDialog.module.css  FAQ.jsx  FAQ.module.css  FeatureCard.jsx  FeatureCard.module.css  Footer.jsx  Footer.module.css  Navbar.jsx  Navbar.module.css  PipelineDiagram.jsx  PipelineDiagram.module.css  ThemeToggle.jsx  ThemeToggle.module.css  icons.jsx
(+7 files in other folders)
