# TORQ project config.
# NOTE: dependencies are intentionally left empty in this scaffold.
# Add packages as the build progresses with:  uv add <pkg>

[project]
name = "torq"
version = "0.1.0"
description = "TORQ — Fault-to-Fix Engine: autonomous machine diagnosis and repair dispatch."
requires-python = ">=3.11"
dependencies = [
    "openai>=2.46.0",
    "pydantic-settings>=2.14.2",
    "qdrant-client[fastembed]>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torq"]
