# TORQ project config.
# NOTE: dependencies are intentionally left empty in this scaffold.
# Add packages as the build progresses with:  uv add <pkg>

[project]
name = "torq"
version = "0.1.0"
description = "TORQ - Fault-to-Fix Engine: autonomous machine diagnosis and repair dispatch."
requires-python = ">=3.11"
dependencies = [
    "chonkie>=1.7.0",
    "fastapi>=0.139.2",
    "fpdf2>=2.8.7",
    "mcp>=1.28.1",
    "openai>=2.46.0",
    "paho-mqtt>=2.1.0",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pydantic-settings>=2.14.2",
    "qdrant-client[fastembed]>=1.18.0",
    "twilio>=9.10.9",
    "uharfbuzz>=0.55.0",
    "uvicorn>=0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/torq"]
